--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   deb:
     name: Build
-    runs-on: ubuntu-25.10
+    runs-on: self-hosted
 
     steps:
       - name: Checkout source
