--- a/.github/workflows/generate-deb.yml
+++ b/.github/workflows/generate-deb.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   deb:
     name: Debian
-    runs-on: ubuntu-25.10
+    runs-on: self-hosted
 
     steps:
       - name: Checkout source
