--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shaderbg"
-version = "1.1.0"
+version = "1.2.0"
 authors = ["Harlen Batagelo <hbatagelo@gmail.com>"]
 license = "GPL-3.0-or-later"
 edition = "2021"
@@ -45,18 +45,19 @@ serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", default-features = false, features = ["std"] }
 simple_logger = "5"
 thiserror = "2"
-toml = "0.9.8"
+toml = "0.9"
 
 [dev-dependencies]
 pretty_assertions = "1"
 
 [profile.release]
-lto = "fat"
-codegen-units = 1
-panic = "abort"
-strip = "symbols"
-opt-level = "z"
+lto = "fat"       # Link-time optimization
+codegen-units = 1 # Better optimization
+panic = "abort"   # Smaller panic handling
+strip = "symbols" # Remove debug symbols
+opt-level = "z"   # Optimize for size
 
+# Debian package metadata
 [package.metadata.deb]
 extended-description = """\
 Utility for rendering shaders as live wallpapers in Wayland compositors that\
@@ -108,6 +109,7 @@ assets = [
     ],
 ]
 
+# RPM package metadata
 [package.metadata.generate-rpm]
 assets = [
     { source = "target/release/shaderbg", dest = "/usr/bin/shaderbg", mode = "755" },
